Fix width issue on mobile device

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,8 @@ html {
   font-size: 1em;
 }
 body {
-  margin: 0 auto;
+  /*margin: 0 auto;*/
+  width: 100%;
 }
 article {
   clear: left;
@@ -40,34 +41,46 @@ article h1:before, .services h3:before, .about h2:before, .team h1:before, .clie
   text-align: right;
 }
 
-.flex-container {
+/*.flex-container {
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-content: flex-start;
   align-items: stretch;
-}
+}*/
 
 /* Navigation bar */
 nav {
-  border-bottom: 2px solid rgba(0,0,0,0.2);
+  /*border-bottom: 2px solid rgba(0,0,0,0.2);*/
 }
 nav ul {
   list-style-type: none;
 
 }
 nav li {
+  box-sizing: border-box;
   text-align: center;
+  display: inline-block;
+  float: left;
+  width: 8em;
+  padding: 1em;
+  margin: 1em calc(25% - 4em); 
+  border: 2px solid rgba(0,0,0,0.2);
+  border-radius: 5px;
 }
 nav a {
+  
   text-decoration: none;
   color: rgb(124,131,135);
+  
+  
+  
 }
 nav a:hover {
   color: rgb(0,0,0);
 }
-.flex-menu-list {
+/*.flex-menu-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -81,10 +94,11 @@ nav a:hover {
   flex-shrink: 0;
   flex-basis: 100px;
   padding: 10px;
-}
+}*/
 
 /* Header content */
 header {
+  clear: left;
   background-image: url('../images/top-bkgrnd.jpg');
   width: 100%;
   height: 15em;
@@ -401,12 +415,12 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 
 /* NOT mobile version */
 /* when it's BIGGER than 480px, do all this stuff */
-@media screen and (min-width: 480px) {
+/*@media screen and (min-width: 720px) {
   nav ul {
     margin: 0 auto;
     width: 80%;
   }
-}
+}*/
 
 /*use in DESKTOP LAYOUT*/
 /*.services .flex-text-block {
